# business-register

./: README.md  schema.graphql
artwork/: asyncpg.psd  mantine.psd  node.psd  pydantic.psd  tech_stack.ai
backend/: .coveragerc  app.config.toml  app_config.toml  pyproject.toml  requirements.txt  schema.graphql
backend/rik_app/: __init__.py  __main__.py  app_config.toml  config.py  main.py  rik_types.py  types.py
backend/rik_app/api/: __init__.py  helpers.py  resolvers.py  schema.graphql  utils.py
backend/rik_app/db/: __init__.py  database.py
backend/rik_app/models/: __init__.py  company.py  judicial_person.py  natural_person.py  person.py  shareholder.py
backend/rik_app/tax_id/: generator.py  helpers.py  validator.py
backend/rik_app/tools/: gentools.py  nametools.py  tintools.py
backend/rik_app/utils/: apiutils.py  classutils.py  pathutils.py  testutils.py
backend/scripts/: init_db.py
backend/server/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/test_models/: test_company.py  test_judicial_person.py  test_natural_person.py  test_person.py  test_shareholder.py
backend/tests/test_tax_id/: test_helpers.py  test_tax_ids.py
backend/tests/test_tools/: test_gentools.py  test_nametools.py  test_tintools.py
backend/tests/test_utils/: test_apiutils.py  test_classutils.py  test_gentools.py  test_pathutils.py  test_testutils.py
frontend/: .gitignore  appConfig.ts  i18n.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  express.js  graphql.ts  main.css  main.tsx  types.ts
frontend/src/components/: CompanyDetailsCard.module.css  CompanyDetailsCard.tsx  SearchCompaniesModal.module.css  SearchCompaniesModal.tsx  SearchField.styles.tsx  SearchField.tsx  SearchInput.styles.tsx  SearchInput.tsx  (+4 more)
scripts/: open_browser.bat  run_backend_server.bat  run_frontend_server.bat
(+40 files in other folders)
