[tool.poetry]
name = "rik_app"
version = "0.1.0"
description = "RIK Business Register Backend"
authors = ["Mattias Aabmets <mattias.aabmets@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.0"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.151.2"}
psycopg = {extras = ["binary"], version = "^3.1.7"}
mimesis = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]