# ------------------------------------------------------------ #
[tool.poetry]
name = "rik_app"
version = "0.1.0"
description = "RIK Business Register Backend"
authors = [
	"Mattias Aabmets <mattias.aabmets@gmail.com>"
]
packages = [
    {include = "rik_app"}
]
include = [
    "rik_app",
    "rik_app.*",
    "rik_app.*.*"
]

# ------------------------------------------------------------ #
[tool.poetry.dependencies]
python = "^3.10"
dotmap = "^1.3.30"
tomli = "^2.0.1"
ariadne = "^0.17.1"
starlette = "^0.23.1"
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
faker = "^16.4.0"
mimesis = "^7.0.0"
asyncpg = "^0.27.0"

# ------------------------------------------------------------ #
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
coverage = "^7.0.4"

# ------------------------------------------------------------ #
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------ #
[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning"
]
addopts = [
    "--import-mode=importlib",
]